--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "@angular/router": "~11.2.11",
     "@ng-bootstrap/ng-bootstrap": "^9.1.3",
     "bootstrap": "^4.5.0",
+    "ng2-redux": "^5.1.2",
+    "redux": "^4.1.2",
     "rxjs": "~6.6.0",
+    "rxjs-compat": "^6.6.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
